<resources>
    <string name="app_name">Claim_app</string>

    <string name="claim_app">Claim Approval App</string>
    <string name="language">English</string>
    <string name="current_language">English</string>

    // SplashScreen
    <string name="loading">Loading</string>

    // On Boarding
    <string name="skip_btn">Skip</string>
    <string name="lets_get_started">LETS GET APPROVING</string>
    <string name="header">Header</string>
    <string name="sliderimage">SliderImage</string>
    <string name="slide_text">Slide Text</string>

    // On Boarding slides
    <string name="welcome_slide">Prepare to approve Claims on the go</string>
    <string name="first_slide">See all Claims that need your approval</string>
    <string name="second_slide">View all the required Claim Details</string>
    <string name="third_slide">View the Claim Invoice on the app</string>
    <string name="welcome_desc">Easily approve or reject claims with a simple click of a button.</string>
    <string name="first_slide_desc">All Claims that have been assigned to you will appear in your work list.</string>
    <string name="second_slide_desc">Once on the selected claim, you can view all its details such as amount, date, customer, etc.</string>
    <string name="third_slide_desc">Easy download ans view the Invoice on the app.</string>


    // Login
    <string name="login">TechGuys</string>
    <string name="loginbutton">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="validation">Invalid</string>
    <string name="test_connection">Test your Connection</string>
    <string name="view_all">View Pending Claims</string>
    <string name="past">Past Approvals</string>

    // Expense page
    <string name="msg_no_results">No Claims to Approve</string>
    <string name="lbl_new_expense_title">New Expense</string>
    <string name="hint_enter_note">Enter your expense</string>
    <string name="lbl_edit_expense_title">Edit expense</string>
    <string name="filter">Filter</string>
    <string name="amount">Amount</string>
    <string name="customer">Customer</string>
    <string name="description">Description</string>
    <string name="claim">Claim</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>


    <string name="play_again">Play Slides</string>
    <string name="currency">€</string>
    <string name="logo">Logo</string>
    <string name="photo">photo</string>
    <string name="Sess">Hello</string>
    <string name="Check">lets check if you have Claims to approve today</string>
    <string name="date">Date</string>
    <string name="claimicon">Claimicon</string>
    <string name="dateicon">Dateicon</string>
    <string name="customericon">CustomerIcon</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="text_amount">234.87</string>
    <string name="text_claim">CLA34</string>
    <string name="text_offer">EMEA7582356SIA</string>
    <string name="text_invoice">45986</string>
    <string name="text_customer">Amazon</string>


    <string name="action_settings">Settings</string>
    <string name="file_view">View Invoice</string>
    <string name="file_download">Download Invoice</string>
    <string name="file_request">Request Access Again</string>
    <string name="customer_name">Customer Name</string>
    <string name="request_id">Request ID</string>
    <string name="claim_number">Claim Number</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="offer_code">Offer Code</string>
    <string name="claim_date">Claim Date</string>
    <string name="currencytext">Currency</string>
    <string name="overage">Overage</string>
    <string name="total_amount">Total Amount</string>
    <string name="textview">TextView</string>
    <string name="customer_reference_date">Customer Reference Date</string>
    <string name="settlement_method">Settlement Method</string>
    <string name="claim_type">Claim Type</string>
    <string name="bill_to">Bill To</string>
    <string name="bill_to_account">Bill To Account</string>
    <string name="ship_to">Ship To</string>
    <string name="ship_to_account">Ship To Account</string>
    <string name="from">From</string>
    <string name="nextapprove">Approve to next Level</string>
    <string name="view_claims_that_are_pending_your_approval">View Claims that are pending your approval</string>
    <string name="pending_claims">Pending Claims</string>
    <string name="approved_claims">Approved Claims</string>
    <string name="rejected_claims">Rejected Claims</string>
    <string name="openin">Open in English</string>
    <string name="see_the_claims_you_approved">See the Claims you Approved this month</string>
    <string name="next">Next</string>
    <string name="see_the_claims_you_rejected">See the claims you rejected this month</string>
    <string name="view_claim_analyst_comment">View Claim Analyst Comment</string>
    <string name="add_new_comment">Add new Comment</string>
    <string name="Home">Home</string>
    <string name="Language">Language</string>
    <string name="Logout">Logout</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="Approved">Approved</string>
    <string name="Rejected">Rejected</string>
    <string name="Invoice">Invoice</string>
    <string name="Details">Details</string>
    <string name="Comment">Comment</string>
    <string name="ClaimPage">Claim Page</string>
    <string name="InvoicePage">Invoice Page</string>
    <string name="ClaimstoApprove">Claims to Approve</string>
    <string name="MyApprove">My Approve</string>
    <string name="MyReject">My Reject</string>
    <string name="Hello">Hello</string>
</resources>