<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/IVslide"
        android:layout_width="381dp"
        android:layout_height="337dp"
        android:contentDescription="@string/sliderimage"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="360dp"
        android:layout_height="101dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/header"
        android:textColor="@color/second"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVslide" />

    <TextView
        android:id="@+id/tvslideDes"
        android:layout_width="366dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/slide_text"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>