<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Comment">



<androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/allerta"
            android:text="@string/view_claim_analyst_comment"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/second"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/second"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/second"
                android:enabled="false"
>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvPastComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/allerta"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="233dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/add_new_comment"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/second"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/second"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/second"
>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvAddComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/second"
                    android:inputType="textMultiLine"
                    android:lines="4"/>

            </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/claimnav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_gravity="bottom"
        android:background="@color/third"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/claim_nav"
        android:theme="@style/BottomNavigationTheme"/>

</androidx.constraintlayout.widget.ConstraintLayout>

